Fix and improve the UX during the checkout process
- Temporarily disable the "Continue" button on address selection
- Automatically choose the shipping method when there is only one
- Show the full version when hovering over a truncated description

--- a/skin/frontend/base/default/payone/core/amazonpay.css
+++ b/skin/frontend/base/default/payone/core/amazonpay.css
@@ -58,7 +58,12 @@
     float: none;
 }
 
-#shippingMethodsDiv .sp-methods dd label:hover {
+#shippingMethodsDiv .sp-methods dd span ~ label {
+    padding-left: 15px !important;
+}
+
+#shippingMethodsDiv .sp-methods dd input ~ label:hover,
+#shippingMethodsDiv .sp-methods dd input:hover ~ label {
     background-color: #ececec;
 }
 
